<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activty.MainActivity">
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/g2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1"/>

    <ImageView
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/g2"
        android:id="@+id/amit_img"
        android:layout_height="@dimen/_200sdp"
        android:src="@drawable/amit"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailSubject"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/amit_img"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="20dp"
        android:textAlignment="viewStart"
        android:hint="@string/email" />


    <com.google.android.material.textfield.TextInputLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/etPasswordLayout"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/email"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        >

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/passwordoo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:inputType="textPassword"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/email"
        android:drawablePadding="20dp"
        android:textAlignment="viewStart"
        android:hint="@string/pass" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/etPasswordLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/sign_in_btn"
        android:layout_marginVertical="@dimen/_10sdp"
        />
    <TextView
        android:id="@+id/create_new_acc_mssg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/login_btn"
        android:textSize="22sp"
        android:text="@string/create_new_acc_msg"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center"/>
</androidx.constraintlayout.widget.ConstraintLayout>